# wingz-technical-assessment

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  demo.yml
config/: settings.py  urls.py
docs/: 01_project_setup.md  02_architecture_and_implementation.md
rides/: models.py  serializers.py  urls.py  views.py
rides/migrations/: 0001_initial.py  0002_seed_data.py
scripts/: client_simulator.py  generate_report.py
tests/: test_placeholder.py  test_rides.py
